--- a/test/tagme.test.html
+++ b/test/tagme.test.html
@@ -13,6 +13,7 @@
         <button id="gettags">get tags</button>
         <button id="serializedTags">serializedTags</button>
         <button id="clearTags">clearTags</button>
+        <button id="setTags">setTags</button>
         <button id="version">version</button>
         <div class="" id="result"></div>
         <script src="../lib/jquery-1.8.2.js"></script>
